...
        super.viewDidLoad()

        let homeVC = DriverHomeViewController()
        homeVC.tabBarItem = UITabBarItem(title: "Drive", image: #imageLiteral(resourceName: "round_flag_black_24pt"), selectedImage: #imageLiteral(resourceName: "round_flag_black_24pt"))

        let locationsVC = LocationsViewController()
        locationsVC.tabBarItem = UITabBarItem(title: "Locations", image: #imageLiteral(resourceName: "round_explore_black_36pt"), selectedImage: #imageLiteral(resourceName: "round_explore_black_36pt"))
        
        let dashboardVC = DashboardViewController()
        dashboardVC.tabBarItem = UITabBarItem(title: "Dashboard", image: #imageLiteral(resourceName: "round_insert_chart_outlined_black_36pt"), selectedImage: #imageLiteral(resourceName: "round_insert_chart_outlined_black_36pt"))

        let profileVC = ProfileViewController()
        profileVC.tabBarItem = UITabBarItem(title: "Edit Profile", image: #imageLiteral(resourceName: "round_person_black_36pt"), selectedImage: #imageLiteral(resourceName: "round_person_black_36pt"))
...
