// MENU
"menu_ride" = "Ride";
"menu_ride_history" = "Ride History";
"menu_payments" = "Payments";
"menu_locations" = "Locations";
"menu_edit_profile" = "Edit Profile";
"menu_faq" = "FAQ";
"menu_more_options" = "More Options";


...
"settings_title" = "Settings";
"settings_terms" = "Terms & Conditions";
"settings_privacy" = "Privacy Policy";
"settings_conduct" = "Code of Conduct";
"settings_accessibility" = "Accessibility";
"settings_logout" = "Log out";
"settings_ready_logout" = "Ready to Log Out?";
"settings_ready_logout_info" = "Are you sure you want to log out?";
"settings_turned_on" = "Turned On";
"settings_turned_off" = "Turned Off";
"settings_child_seat" = "Child Seat";
"settings_wheelchair" = "Wheelchair";
"accessibility_not_available" = "Accessibility not available on your location. We hope to bring Circuit accessibility options to you very soon.";
...
"ride_unable_to_locate" = "Unable to Locate";
"ride_unable_to_locate_pickup_info" = "We were unable to find a pickup address associated with the information you've entered. Please try a different address.";
"ride_unable_to_locate_dropoff_info" = "We were unable to find a dropoff address associated with the information you've entered. Please try a different address.";
"ride_address_missing" = "Address Missing";
"ride_address_missing_info" = "Please make sure to fill out both pickup and dropoff.";
"ride_too_soon" = "Too Soon!";
"ride_yes_cancel" = "Yes, Cancel";
"ride_cancel_request_info" = "If you cancel and wish to request again, you will lose your spot in the queue.";
"ride_Ill_wait" = "No, I'll wait";
"ride_cancel_reason" = "We're sorry that you had to cancel your ride.\nCan you please let us know the reason?";
"ride_driver_on_the_way" = "Heading your way";
"ride_driver_on_the_way_info" = "You're already connected with a driver, if you cancel now you'll have to wait three minutes before you can request another ride.";
"ride_no_drivers" = "No Drivers Available";
...
"ride_ride_confirmation" = "Ride Confirmation";
"ride_rating_reason" = "We're sorry you were unhappy with your ride.\nCan you please let us know the reason?";
"ride_rating_submitted" = "Rating Submitted!";
"ride_your_driver" = "Your driver";
"ride_select_pickup_stop" = "Select your pick up spot";
"ride_select_dropoff_stop" = "Select your drop off spot";
"ride_select_this_stop" = "Ok";
"ride_go_to_stop_short" = "Your driver will pick you up at the spot you selected.";
"ride_go_to_stop" = "Your driver will pick you up at the spot you selected. Please make sure you are there when your driver arrives.";
"ride_select_another_stop" = "Select another spot";
"ride_pickup_at" = "Pick up at";
"ride_dropoff_at" = "Drop off at";
"ride_driver_pickup" = "Your driver will pick you up here. Need a different pick up spot? Search for another location above or tap Move pin.";
...
// PAYMENTS
"payments_payment_method" = "Payment Method";
"payments_promocode" = "Promocode";
"payments_no_payment_method" = "No payment methods added";
"payments_ending_in" = "ending in";
"payments_no_pc_added" = "No promocodes added";
"payments_remove_payment" = "Yes, remove my payment method";
"payments_this_will_delete_pm" = "This will delete your payment method and a new one must be added to request paid rides.";
"payments_remove_promocode" = "Yes, remove my promocode";
"payments_this_will_remove_pc" = "This will remove your promocode";
"payments_save_card" = "Save Card";
"payments_add_pm" = "Add Payment Method";
"payments_save_pc" = "Save Promocode";
"payments_add_pc" = "Add Promocode";
"payments_add_card" = "Add Card";
"payments_payment_error" = "Payment error";
"payments_payment_error_info" = "There was a problem with your payment method. Please try again or add a new one.";
"payments_payment_not_completed" = "Payment not completed";
"payments_pc_off" = "Off"; //20% Off
"payments_pc_free_rides" = "Free rides";
"payments_pc_invalid" = "Promocode is invalid";
...

// GENERAL
"general_no" = "No";
"general_yes" = "Yes";
"general_cancel" = "Cancel";
"general_edit" = "Edit";
"general_remove" = "Remove";
"general_next" = "Next";
"general_save" = "Save";
"general_ok" = "Ok";
"general_are_you_sure" = "Are you sure?";
"general_confirm" = "Confirm";
"general_done" = "Done";
"general_invalid_input" = "Invalid input";


// MESSAGES
...
"Cancel Ride" = "Cancel Ride";
"Log In" = "Log In";
"Sign Up" = "Sign Up";
"and" = "and";
"You need to update Circuit app to the latest version in order to request rides" = "You need to update Circuit app to the latest version in order to request rides";
"Invalid Submission" = "Invalid Submission";
"Email address is not valid" = "Email address is not valid";
"Mobile phone number is not valid" = "Mobile phone number is not valid";
"Password must be at least 8 characters" = "Password must be at least 8 characters";
"Password must contain at least 1 uppercase letter" =  "Password must contain at least 1 uppercase letter";
"Password must contain at least 1 special character" = "Password must contain at least 1 special character";
"Password must contain at least 1 number" = "Password must contain at least 1 number";
"This field" = "This field";
...
