...
        return view
    }()

    private let emailField: TextField = {
        let field = TextField()
        field.configure(name: "Email".localize(), placeholder: "Email".localize())
        field.accessibilityIdentifier = "emailTextField"
        field.validators = [RequiredValidator(), EmailValidator()]
        field.image = #imageLiteral(resourceName: "EmailBadge")
        field.keyboardType = .emailAddress
        return field
    }()

    private let passwordField: TextField = {
        let field = TextField()
        field.configure(name: "Password".localize(), placeholder: "Password".localize())
        field.accessibilityIdentifier = "passwordTextField"
        field.validators = [RequiredValidator()]
        field.image = #imageLiteral(resourceName: "LockBadge")
        field.isSecureTextEntry = true
        return field
    }()
    
...
